add 'stage' header

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body ng-controller="MainController as $ctrl">
+  <h1>Stage</h1>
   <uiBroadcastTranslate></uiBroadcastTranslate>
   <div style="display: flex;">
 
